# coderabbit-explore

./: .gitignore  README.md  app.py  index.html  package.json  pyproject.toml  styles.css
app/: layout.js  page.js
components/: SnakeGame.js
lib/: snake.js
snake/: __init__.py  app.py  game.py
src/: game.js
static/: snake.js
templates/: index.html
tests/: snake.test.js  test_game.py  test_snake.py
